# dataset-catalog

./: .gitignore  README.md  era5_intake_catalog.yaml  master_catalog_example.py  model_catalog.yaml  multi_catalog_example.py  observations_catalog.yaml  pyproject.toml  satellite_catalog.yaml  setup.sh  simple_example_dask.py  test_env.py  test_intake.py  usage_examples.py
catalogs/: radar_intake_catalog.yaml  station_intake_catalog.yaml
script/: 01_uv_introduction.ipynb  02_intake_and_dask.ipynb  extra_dask_dataframe_example.ipynb
workshop/: 01_uv_intro.ipynb  02_intake_and_dask.ipynb  02_intake_and_dask_en.ipynb  load_radar.ipynb
